--- a/Vista/interfaz.css
+++ b/Vista/interfaz.css
@@ -264,7 +264,7 @@ margin-left: 200px;
     box-sizing: border-box;
     display: block;
     position: relative;
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/os-sostenibles.jpg");
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("./images/os-sostenibles.jpg");
     background-position: 50% 50%;
     min-height: 800px;
     width: auto;
@@ -512,4 +512,19 @@ body {
 
 .login__forgot:hover {
     color: rgb(249, 251, 255);
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: $input-padding-y $input-padding-x;
+    font-family: $input-font-family;
+    @include font-size($input-font-size);
+    font-weight: $input-font-weight;
+    line-height: $input-line-height;
+    color: $input-color;
+    background-color: $input-bg;
+    background-clip: padding-box;
+    border: $input-border-width solid $input-border-color;
+    appearance: none; 
 }
